[package]
name = "lioness-rs"
version = "0.1.0"
authors = ["Jedrzej Stuczynski <jedrzej.stuczynski@gmail.com>"]
description = "Rust implementation of Lioness block cipher"
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/jstuczyn/lioness-rs"
categories = ["cryptography"]
keywords = ["crypto", "block-cipher", "lioness", "sphinx", "mixnet"]

[dependencies]
cipher = "0.3.0"
crypto-mac = "0.11.1"
digest = "0.10.0-pre.3"
generic-array = "0.14"

[dev-dependencies]
blake3 = { version = "1.0.0", features = ["traits-preview"] }
chacha20 = "0.7.2"
generic-array = { version = "0.14", features = ["more_lengths"] }

[features]
block-cipher = []